✨ feat:  add buy and sell price/quantity fields to TRecord and SwingRecord
